<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/personal_area_teacher_settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/setting"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/personal_area_teacher_background"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:layout_alignTop="@id/personal_area_teacher_hero"
        android:background="@drawable/background_area_teacher">
    </ImageView>

    <ImageView
        android:id="@+id/personal_area_teacher_hero"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/hero_owl"
        tools:ignore="SpeakableTextPresentCheck"
        />

    <TextView
        android:id="@+id/personal_area_teacher_last_name"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/personal_area_teacher_hero"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:letterSpacing="0.07"
        android:textStyle="bold"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:text="Иванов">
    </TextView>

    <TextView
        android:id="@+id/personal_area_teacher_name"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/personal_area_teacher_last_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:letterSpacing="0.07"
        android:textStyle="bold"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:text="Иван"
        />

    <TextView
        android:id="@+id/personal_area_teacher_patronymic"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/personal_area_teacher_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:letterSpacing="0.07"
        android:textStyle="bold"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:text="Иванович"
        />

    <ImageButton
        android:id="@+id/personal_area_teacher_play"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_background"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_background"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/minecraftia_regular"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowRadius="5"
        android:text="@string/play"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/personal_area_teacher_tasks"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_play"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_play"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/minecraftia_regular"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowRadius="5"
        android:text="@string/tasks"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/personal_area_teacher_regulations_game"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_tasks"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_tasks"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/minecraftia_regular"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowRadius="5"
        android:text="@string/regulations_game"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/personal_area_teacher_logout"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_regulations_game"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/personal_area_teacher_regulations_game"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/minecraftia_regular"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowRadius="5"
        android:text="@string/exit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

</RelativeLayout>