<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/change_password_background"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_settings" />

    <ImageButton
        android:id="@+id/change_password_cross"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/change_password_background"
        android:layout_alignEnd="@id/change_password_background"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/cross"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
         />

    <TextView
        android:id="@+id/change_password_old_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:letterSpacing="0.07"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:layout_below="@id/change_password_cross"
        android:layout_alignStart="@id/change_password_background"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_old_text"
        android:layout_alignStart="@id/change_password_background"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-20dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        app:errorIconDrawable="@android:color/transparent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_old_edit_text"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/change_password_eye1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@id/change_password_old"
        android:layout_alignBottom="@id/change_password_old"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:alpha="0.7"
        android:background="@drawable/icon_open_eye"
        android:tag="1"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/change_password_new_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:letterSpacing="0.07"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:layout_below="@id/change_password_old"
        android:layout_alignStart="@id/change_password_background"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_new_text"
        android:layout_alignStart="@id/change_password_background"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-20dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        app:errorIconDrawable="@android:color/transparent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_new_edit_text"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/change_password_eye2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/icon_open_eye"
        android:layout_alignEnd="@id/change_password_new"
        android:layout_alignBottom="@id/change_password_new"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:alpha="0.7"
        android:tag="1"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        />

    <TextView
        android:id="@+id/change_password_repeat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_new_password"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:letterSpacing="0.07"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:layout_below="@id/change_password_new"
        android:layout_alignStart="@id/change_password_background"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_repeat_text"
        android:layout_alignStart="@id/change_password_background"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-20dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        app:errorIconDrawable="@android:color/transparent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password_repeat_edit_text"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/change_password_eye3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/icon_open_eye"
        android:layout_alignEnd="@id/change_password_repeat"
        android:layout_alignBottom="@id/change_password_repeat"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:alpha="0.7"
        android:tag="1"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        />

    <ImageButton
        android:id="@+id/change_password_button"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/change_password_background"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_menu"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/change_password_background"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:letterSpacing="0.07"
        android:fontFamily="@font/minecraftia_regular"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:shadowDx="10"
        android:text="@string/change"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        />
</RelativeLayout>