<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scaleType="center"
    tools:context=".ui.screens.newpassword.view.NewPasswordActivity">

    <ImageView
        android:id="@+id/new_password_activity_background_login"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/background_menu"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/new_password_activity_activity_cross"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@id/new_password_activity_background_login"
        android:layout_alignTop="@id/new_password_activity_background_login"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cross"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/new_password_activity_new_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:letterSpacing="0.07"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:layout_below="@id/new_password_activity_activity_cross"
        android:layout_alignStart="@id/new_password_activity_background_login"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_activity_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/new_password_activity_new_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        app:errorIconDrawable="@android:color/transparent">

    <EditText
        android:id="@+id/new_password_activity_password_text"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/transparent"
        android:inputType="textPassword"
        android:maxLength="12"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/minecraftia_regular"
        tools:ignore="SpeakableTextPresentCheck"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/new_password_button_eye1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@id/new_password_activity_password"
        android:layout_alignBottom="@id/new_password_activity_password"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/icon_open_eye"
        android:alpha="0.7"
        android:tag="1"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/new_password_activity_repeat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_new_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:letterSpacing="0.07"
        android:fontFamily="@font/minecraftia_regular"
        android:textAllCaps="true"
        android:layout_below="@id/new_password_activity_password"
        android:layout_alignStart="@id/new_password_activity_background_login"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_activity_repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/new_password_activity_repeat_text"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/color_hint"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        app:errorIconDrawable="@android:color/transparent">

    <EditText
        android:id="@+id/new_password_activity_repeat_password_text"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:backgroundTint="@android:color/transparent"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/minecraftia_regular"
        tools:ignore="SpeakableTextPresentCheck"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/new_password_button_eye2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@id/new_password_activity_repeat_password"
        android:layout_alignBottom="@id/new_password_activity_repeat_password"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/icon_open_eye"
        android:alpha="0.7"
        android:tag="1"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/new_password_activity_change_password_button"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@id/new_password_activity_repeat_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_menu"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@id/new_password_activity_repeat_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:letterSpacing="0.07"
        android:fontFamily="@font/minecraftia_regular"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:shadowDx="10"
        android:text="@string/change"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        />

</RelativeLayout>